fixed: some dialogs were broken improved: dialog buttons are now right-aligned

--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -21,6 +21,10 @@
     }
   }
 
+  .buttons {
+    text-align: right;
+  }
+
   .input-text, .input-select, .input-textarea, .input-label {
     width: 100%;
     margin-bottom: 15px;
